# idf-cmake-timestamp-demo

./: CMakeLists.txt
main/: CMakeLists.txt  main.c  timestamp.cmake
